# pycog0

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  AGENT-ZERO-GENESIS.md  CMAKE_BUILD_GUIDE.md  CMakeLists.txt  DEPENDENCY_ANALYSIS_REPORT.md  README.md  fix-cogserver-scripts.sh  setup-opencog-gitpod.sh  test-gitpod-setup.sh
.github/: copilot-instructions.md
.github/workflows/: ci-org-gen-2.yml  ci-org-gen-3.yml  cogci.yml  cogutil-test.yml  generate-next-steps.yml  oc.yml  oci.yml  opencog-dependency-build.yml  opencog-ecosystem-build.yml  vm-daemon-mlops.yml  vm-daemon-mlops1.yml
.gitpod/: README.md  TROUBLESHOOTING.md  deploy.sh  setup.sh
TinyCog/behavior/: CMakeLists.txt
TinyCog/dr-roboto/: CMakeLists.txt
TinyCog/protos/: CMakeLists.txt
TinyCog/scratch/: CMakeLists.txt
TinyCog/usage/: CMakeLists.txt
TinyCog/util/: CMakeLists.txt
agents/: CMakeLists.txt
agents/cpp/: .gitignore  CMakeLists.txt  README.md
agents/cpp/agentzero-core/: CMakeLists.txt  README.md
agents/cpp/agentzero-core/include/opencog/agentzero/: AgentZeroCore.h  CognitiveLoop.h  KnowledgeIntegrator.h  TaskManager.h
agents/cpp/agentzero-core/src/: AgentZeroCore.cpp  CognitiveLoop.cpp  KnowledgeIntegrator.cpp  TaskManager.cpp
agents/cpp/agentzero-core/tests/: CMakeLists.txt  comprehensive_goal_test
agents/scm/pair-agent/: CMakeLists.txt
agi-bio/eddie/: CMakeLists.txt
agi-bio/knowledge-import/: CMakeLists.txt
agi-bio/moses-scripts/: CMakeLists.txt
agi-bio/reasoning/: CMakeLists.txt
agi-bio/reduced-atomspaces/: CMakeLists.txt
agi-bio/relationship-mining/: CMakeLists.txt
atomese-simd/examples/: CMakeLists.txt
atomspace-explorer/: CMakeLists.txt
atomspace-explorer/e2e/: CMakeLists.txt
atomspace-explorer/src/: CMakeLists.txt
atomspace-js/: CMakeLists.txt
atomspace-typescript/: CMakeLists.txt
atomspace-typescript/.storybook/: CMakeLists.txt
atomspace-typescript/public/: CMakeLists.txt
atomspace-websockets/cmake/: CMakeLists.txt
atomspace/lib/: AtomSpaceConfig.cmake.in  CMakeLists.txt
benchmark/assembly/: CMakeLists.txt
benchmark/atomspace/: CMakeLists.txt
benchmark/query-link/: CMakeLists.txt
benchmark/query-loop/: CMakeLists.txt
blender_api/: CMakeLists.txt
blender_api/artistic/: CMakeLists.txt
blender_api/rigAPI/: CMakeLists.txt
blender_api/rigControl/: CMakeLists.txt
blender_api/textures/: CMakeLists.txt
ci_artifacts/: CMakeLists.txt  success_report.json
cogprotolab/cogprotolab/: CMakeLists.txt
cogprotolab/vis-word-pairs/: CMakeLists.txt
cogutil/: CMakeLists.txt
destin/doc/: CMakeLists.txt
distributional-value/: CMakeLists.txt
docker/archive/: CMakeLists.txt
docker/hydro/: CMakeLists.txt
docker/indigo/: CMakeLists.txt
docker/noetic/: CMakeLists.txt
docs/: BUILD_PIPELINE.md  GITPOD_SETUP.md  OPENCOG_CONSOLIDATED_BUILD.md  OPENCOG_DEPENDENCY_BUILD.md  QUICK_START_GUIDE.md
evidence/: CMakeLists.txt
external-tools/: CMakeLists.txt
external-tools/AtomSpaceSubscriber/: CMakeLists.txt
external-tools/Obsolete/: CMakeLists.txt
external-tools/SUMO_importer/: CMakeLists.txt
external-tools/cnet_importer/: CMakeLists.txt
external-tools/cycl-import/: CMakeLists.txt
external-tools/gtwc/: CMakeLists.txt
external-tools/impression/: CMakeLists.txt
external-tools/nltk_importer/: CMakeLists.txt
external-tools/radar-chart/: CMakeLists.txt
generate/demo/: CMakeLists.txt
ghost_bridge/action/: CMakeLists.txt
ghost_bridge/cfg/: CMakeLists.txt
ghost_bridge/msg/: CMakeLists.txt
guile-dbi/: CMakeLists.txt
guile-dbi/guile-dbd-mysql/: CMakeLists.txt
guile-dbi/guile-dbd-postgresql/: CMakeLists.txt
guile-dbi/guile-dbd-sqlite3/: CMakeLists.txt
guile-dbi/website/: CMakeLists.txt
language-learning/: CMakeLists.txt
language-learning/.circleci/: CMakeLists.txt
language-learning/conda/: CMakeLists.txt
language-learning/notebooks/: CMakeLists.txt
learn/download/: CMakeLists.txt
learn/learn-lang-diary/: CMakeLists.txt
learn/run/: CMakeLists.txt
learn/run-manual/: CMakeLists.txt
link-grammar-website/: CMakeLists.txt
link-grammar-website/german/: CMakeLists.txt
link-grammar-website/lithuanian/: CMakeLists.txt
link-grammar-website/mirrors/: CMakeLists.txt
link-grammar-website/papers/: CMakeLists.txt
link-grammar-website/russian/: CMakeLists.txt
link-grammar/bindings/: CMakeLists.txt
link-grammar/docker/: CMakeLists.txt
link-grammar/man/: CMakeLists.txt
link-grammar/mingw/: CMakeLists.txt
link-grammar/morphology/: CMakeLists.txt
link-grammar/msvc/: CMakeLists.txt
link-grammar/systest/: CMakeLists.txt
linkgrammar-relex-web/: CMakeLists.txt  requirements.txt
linkgrammar-relex-web/link_grammar_web_ui/: CMakeLists.txt
linkgrammar-relex-web/parser_ui/: CMakeLists.txt
logicmoo_cogserver/: CMakeLists.txt
logicmoo_cogserver/prolog/: CMakeLists.txt
loving-ai/: CMakeLists.txt
loving-ai-ghost/: CMakeLists.txt
loving-ai-ghost/test-scripts/: CMakeLists.txt
loving-ai/DICT/: CMakeLists.txt
loving-ai/LIVEDATA/: CMakeLists.txt
loving-ai/ONTOLOGY/: CMakeLists.txt
loving-ai/RAWDATA/: CMakeLists.txt
loving-ai/TOPIC/: CMakeLists.txt
loving-ai/WORLDDATA/: CMakeLists.txt
ocpkg/: CMakeLists.txt
opencog-cycl/: CMakeLists.txt
opencog-debian/: CMakeLists.txt
opencog-neo4j/: CMakeLists.txt
opencog-nix/: CMakeLists.txt
opencog-to-minecraft/: CMakeLists.txt
opencog.org/: CMakeLists.txt
opencog_rpi/: CMakeLists.txt
pi_vision/: CMakeLists.txt
pln-brca-xp/: CMakeLists.txt
profile/: CMakeLists.txt
python-client/: CMakeLists.txt
python-destin/: CMakeLists.txt
rest-api-documentation/: CMakeLists.txt
rocca/: CMakeLists.txt
ros_opencog_robot_embodiment/: CMakeLists.txt
scripts/: README.md  adaptive-boost-install.sh  auto_fix.py  create_cmake_configs.py  prepare_build_environment.sh  test-adaptive-boost.sh  test_auto_fix.py  validate_dependency_build.py  validate_workflow.py
semantic-vision/: CMakeLists.txt
stochastic-language-generation/: CMakeLists.txt
test-datasets/: CMakeLists.txt
tv-toolbox/: CMakeLists.txt
unity3d-opencog-game/: CMakeLists.txt
(+1356 files in other folders)
